# minipix_uart_interface

./: .gitignore  README.md
software/: CMakeLists.txt  test.sh
software/dummy/linux/: CMakeLists.txt
software/dummy/linux/include/: serial_port.h
software/dummy/oneweb/src/: minipix_dummy_linux.cpp
software/dummy/shared/include/: minipix_dummy.h
software/dummy/shared/src/: minipix_dummy.cpp
software/example_interface/linux/: CMakeLists.txt
software/example_interface/linux_test/: CMakeLists.txt  README.md  analyse.py  run_tot_toa.sh
software/example_interface/linux_test/include/: minipix_interface_linux.h
software/example_interface/linux_test/src/: main.cpp  minipix_interface_linux.cpp
software/example_interface/linux_test/src/llcp/: llcp.c
software/example_interface/shared/include/: gatherer_interface.h
software/example_interface/shared/src/: gatherer_interface.c
software/example_interface/stm32f411/: CMakeLists.txt
software/example_interface/stm32f411/include/: minipix_interface_stm.h
software/example_interface/stm32f411/src/: minipix_interface_stm.c
software/example_oneweb/: CMakeLists.txt  run.sh
software/example_oneweb/src/: main.cpp
software/gatherer/: CMakeLists.txt
software/gatherer/include/: gatherer.h
software/gatherer/src/: gatherer.cpp  main_tot_toa.cpp
software/llcp/include/: llcp_minipix_messages.h
software/llcp/src/: llcp_minipix_messages.c
software/mui/: CMakeLists.txt  README.md
software/mui/include/: mui.h
software/mui/src/: mui.c
